2011-11-30  Robin Dunn  <robin@alldunn.com>

        Use the wxGCDC(wxGraphicsContext) constructor on Mac as well
        to avoid issues with the wxGCDC(wxPrinterDC) constructor.
        https://bugs.webkit.org/show_bug.cgi?id=73463
        
        Reviewed by Kevin Ollivier.

        * WebFrame.cpp:
        (wxWebFramePrintout::OnPrintPage):

2011-11-26  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r101193.
        http://trac.webkit.org/changeset/101193
        https://bugs.webkit.org/show_bug.cgi?id=73158

        Breaks Windows and Qt minimal. (Requested by pfeldman on
        #webkit).

        * WebKitSupport/InspectorClientWx.cpp:
        * WebKitSupport/InspectorClientWx.h:

2011-11-22  Pavel Feldman  <pfeldman@google.com>

        Web Inspector: remove Inspector::bringToFront from the protocol.
        https://bugs.webkit.org/show_bug.cgi?id=72937

        Reviewed by Yury Semikhatsky.

        * WebKitSupport/InspectorClientWx.cpp:
        (WebCore::InspectorClientWx::bringFrontendToFront):
        * WebKitSupport/InspectorClientWx.h:

2011-11-21  Robin Dunn  <robin@alldunn.com>

        Add wxWebKit APIs for controlling WebKit caching behavior.
        https://bugs.webkit.org/show_bug.cgi?id=72891

        Reviewed by Kevin Ollivier.

        * WebSettings.cpp:
        (wxWebSettings::SetPrivateBrowsingEnabled):
        (wxWebSettings::PrivateBrowsingEnabled):
        (wxWebSettings::SetUsesPageCache):
        (wxWebSettings::UsesPageCache):
        (wxWebSettings::SetOfflineWebApplicationCacheEnabled):
        (wxWebSettings::OfflineWebApplicationCacheEnabled):
        * WebSettings.h:

2011-11-21  Robin Dunn  <robin@alldunn.com>

        Add wxWebKit API for retrieving frame and page URLs.
        https://bugs.webkit.org/show_bug.cgi?id=72890

        Reviewed by Kevin Ollivier.

        * WebBrowserShell.cpp:
        (wxWebBrowserShell::wxWebBrowserShell):
        * WebFrame.cpp:
        (wxWebFrame::GetURL):